tests/spec/emit/snapshots/string_substring_range_value_eval_order.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  import "go:fmt"
  
  fn make_s() -> string {
    fmt.Println("receiver")
    "hello"
  }
  
  fn make_range() -> Range<int> {
    fmt.Println("range")
    1..4
  }
  
  fn main() {
    fmt.Println(make_s().substring(make_range()))
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func makeS() string {
	fmt.Println("receiver")
	return "hello"
}

func makeRange() lisette.Range[int] {
	fmt.Println("range")
	return lisette.Range[int]{
		Start: 1,
		End:   4,
	}
}

func main() {
	arg := makeS()
	range_1 := makeRange()
	fmt.Println(lisette.Substring(arg, range_1.Start, range_1.End))
}
