tests/spec/emit/snapshots/string_substring_ref_receiver_range_literal.snap
---
source: tests/spec/emit/prelude.rs
description: "input: \nfn test(r: Ref<string>) -> string {\n  r.substring(1..4)\n}\n"
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(r *string) string {
	return lisette.Substring(*r, 1, 4)
}
