tests/spec/emit/snapshots/string_substring_ref_receiver_range_value.snap
---
source: tests/spec/emit/prelude.rs
description: "input: \nfn test(r: Ref<string>, range: Range<int>) -> string {\n  r.substring(range)\n}\n"
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(r *string, range_ lisette.Range[int]) string {
	return lisette.Substring(*r, range_.Start, range_.End)
}
