tests/spec/emit/snapshots/string_with_escapes.snap
---
source: tests/spec/emit/literals.rs
description: "input: \nfn test() {\n  \"hello\\nworld\"\n}\n"
---
package main

func test() {}
