tests/spec/emit/snapshots/struct_autofill_enum_struct_variant.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  enum Action {
    Move { x: int, y: int, dist: int },
    Stop,
  }
  
  fn test() -> Action {
    Action.Move { x: 5, .. }
  }
---
package main

func MakeActionMove(arg0 int, arg1 int, arg2 int) Action {
	return Action{Tag: ActionMove, X: arg0, Y: arg1, Dist: arg2}
}

func MakeActionStop() Action {
	return Action{Tag: ActionStop}
}

type ActionTag uint8

const (
	ActionMove ActionTag = iota
	ActionStop
)

type Action struct {
	Tag  ActionTag
	X    int
	Y    int
	Dist int
}

func test() Action {
	return Action{
		Tag: ActionMove,
		X:   5,
	}
}
