tests/spec/emit/snapshots/struct_autofill_lisette_primitives.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Conf { name: string, count: int, on: bool }
  
  fn test() -> Conf {
    Conf { name: "x", .. }
  }
---
package main

type Conf struct {
	name  string
	count int
	on    bool
}

func test() Conf {
	return Conf{name: "x"}
}
