tests/spec/emit/snapshots/struct_autofill_nested_user_struct_recurses.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Inner { opt: Option<int>, items: Slice<int> }
  struct Outer { inner: Inner }
  
  fn test() -> Outer {
    Outer { .. }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type Inner struct {
	opt   lisette.Option[int]
	items []int
}

type Outer struct {
	inner Inner
}

func test() Outer {
	return Outer{}
}
